--- a/src/assets/scss/layout/_index.scss
+++ b/src/assets/scss/layout/_index.scss
@@ -7,6 +7,9 @@
 @forward "lab";
 @forward "feature";
 @forward "faq";
+@forward "vr-cards";
+@forward "svs-banner";
+@forward "rotate";
 @forward "about";
 @forward "footer";
 @forward "modal";
