--- a/src/assets/scss/common/_reset.scss
+++ b/src/assets/scss/common/_reset.scss
@@ -74,7 +74,8 @@ h6 {
 }
 a {
   text-decoration: none;
-  color: var(--white);;
+  color: var(--white);
+  cursor: pointer;
   &:hover {
     text-decoration: none;
   }
