--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -4,6 +4,7 @@
   &-group {
     margin-block: 2rem;
     textarea {
+      resize: none;
       min-height: 16rem;
     }
   }
@@ -17,10 +18,10 @@
   }
 
   &-control {
-    background-color: #F4F4F4;
+    background-color: #f4f4f4;
     backdrop-filter: blur(1rem);
     border: 0.1rem solid var(--input-border-color, #fff);
-    color: #9E9E9E;
+    color: #9e9e9e;
     padding: 1rem;
     font-size: 1.6rem;
     border-radius: 0.5rem;
@@ -30,10 +31,8 @@
     font-weight: 300;
 
     &::placeholder {
-      color: #9E9E9E;
+      color: #9e9e9e;
     }
-
-    
   }
 
   &-error {
@@ -41,6 +40,5 @@
     color: #a70000;
     padding-left: 1rem;
     margin-top: 0.2rem;
-
   }
 }
