--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,171 +1,223 @@
 @use "../config/" as *;
 
 header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    padding-inline: 2rem;
-    padding-top: 4rem;
-    display: flex;
-    z-index: 10;
-    justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-inline: 2rem;
+  padding-top: 4rem;
+  display: flex;
+  z-index: 10;
+  justify-content: space-between;
 
-    .logo {
-        width: 4.5rem;
+  .logo {
+    filter: brightness(0) invert(1);
+    width: 4.5rem;
+  }
+
+  .secondary-navbar {
+    display: none;
+  }
+
+  .menu-title,
+  .hamburger {
+    display: flex;
+    align-items: center;
+    font-size: 1.8rem;
+    transition: 500ms;
+    cursor: pointer;
+    &:hover {
+      filter: invert(1);
     }
+    &-icon {
+      width: 3rem;
+      height: 3rem;
+      margin-right: 1.2rem;
+    }
+  }
+
+  .explore-tray {
+    position: absolute;
+    width: 80vw;
+    top: 4rem;
+    left: -100%;
+    background: linear-gradient(
+        151.22deg,
+        rgba(236, 194, 67, 0.5) 9.45%,
+        rgba(255, 255, 255, 0.1) 94.83%
+      ),
+      linear-gradient(0deg, rgba(236, 194, 67, 0.4), rgba(236, 194, 67, 0.4));
+    padding: 2rem 4.7rem 4rem;
+    backdrop-filter: blur(2rem);
+    border-radius: 0 1.3rem 1.3rem 0;
+    transition: 400ms ease-in-out;
+    &.navbar-active {
+      display: block;
+      left: 0;
+    }
+
+    .get-in-touch {
+      margin-top: 2.5rem;
+    }
+  }
+  .navlink-item {
+    width: max-content;
+    flex-shrink: 0;
+    button {
+      transition: 300ms ease-in-out;
+      &:hover {
+        color: var(--secondary);
+      }
+    }
+  }
+  .btn-dropdown {
+    width: max-content;
+    display: flex;
+  }
+
+  .product-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.6rem;
+    margin-bottom: 2rem;
+
+    .navlink-item {
+      width: calc(50% - 0.8rem);
+      background: linear-gradient(
+        321.8deg,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0.2) 96.65%
+      );
+      transition: 500ms ease-in-out;
+      border-radius: 1.35rem;
+      padding: 2.6rem 1.4rem 1.5rem;
+      position: relative;
+      &:hover {
+        background: linear-gradient(
+          321.8deg,
+          rgba(210, 210, 210, 0.238) 0%,
+          rgba(255, 255, 255, 0.7) 96.65%
+        );
+      }
+      .coming-soon {
+        position: absolute;
+        bottom: 0;
+        inset-inline: 0.5rem;
+        border-radius: 50vmax;
+        background-color: #292d32;
+        color: #ecc243;
+        text-align: center;
+        padding-block: 0.4rem;
+        transform: translateY(50%);
+      }
+    }
+
+    .icon {
+      width: 3rem;
+      height: 3rem;
+      object-fit: contain;
+      margin-bottom: 2rem;
+    }
+
+    a {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-size: 0.95rem;
+    }
+  }
+
+  .menu-title {
+    margin-bottom: 2.7rem;
+    font-size: 1.7rem;
+  }
+
+  .sub-menu {
+    a {
+      font-size: 1.4rem;
+    }
+
+    .navlink-item:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+}
+.svs-page header {
+  .hamburger {
+    filter: invert(1);
+  }
+  .logo {
+    filter: unset;
+  }
+}
+@include mq(md) {
+  header {
+    padding-top: 3.2rem;
+    padding-inline: 4rem;
 
     .secondary-navbar {
-        display: none;
+      margin-left: auto;
+      width: max-content;
+
+      .sub-menu {
+        display: flex;
+      }
+
+      .navlink-item {
+        margin-right: 3rem;
+      }
+
+      .sub-menu a {
+        font-size: 1.2rem;
+      }
     }
 
+    .navlink-item-dropdown .sub-menu {
+      display: none;
+    }
 
     .menu-title,
     .hamburger {
-        display: flex;
-        align-items: center;
-        font-size: 1.8rem;
-
-        &-icon {
-            width: 3rem;
-            height: 3rem;
-            margin-right: 1.2rem;
-        }
+      font-size: 1.2rem;
     }
 
-    .explore-tray {
-
-        display: none;
-        position: absolute;
-        width: 80vw;
-        top: 0;
-        left: 0;
-        // background: linear-gradient(151.22deg, rgba(236, 194, 67, 0.5) 9.45%, rgba(255, 255, 255, 0.1) 94.83%),
-        //     linear-gradient(0deg, rgba(236, 194, 67, 0.4), rgba(236, 194, 67, 0.4));
-        padding: 2rem 4.7rem 4rem;
-        backdrop-filter: blur(2rem);
-        border-radius: 0 1.3rem 1.3rem 0;
-
-        &.navbar-active {
-            display: block;
-        }
-
-        .get-in-touch {
-            margin-top: 2.5rem;
-        }
+    .logo-wrap {
+      position: absolute;
+      inset: 0;
+      margin: auto;
+      width: max-content;
+      height: max-content;
+      margin-top: 3.2rem;
     }
-
-    .product-list {
-        list-style: none;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1.6rem;
-        margin-bottom: 2rem;
-
-        .navlink-item {
-            width: calc(50% - 0.8rem);
-            background: #FFFFFF33;
-            border-radius: 1.35rem;
-            padding: 2.6rem 1.4rem 1.5rem;
-        }
-
-        .icon {
-            width: 3rem;
-            height: 3rem;
-            object-fit: contain;
-            margin-bottom: 2rem;
-        }
-
-        a {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-size: 0.95rem;
-        }
-    }
-
-    .menu-title {
-        margin-bottom: 2.7rem;
-        font-size: 1.7rem;
-    }
-
-    .sub-menu {
-        a {
-            font-size: 1.4rem;
-        }
-
-        .navlink-item:not(:last-child) {
-            margin-bottom: 1rem;
-        }
-    }
-
-}
-
-@include mq(md) {
-    header {
-        padding-top: 3.2rem;
-        padding-inline: 4rem;
-
-        .secondary-navbar {
-            margin-left: auto;
-
-            .sub-menu {
-                display: flex;
-            }
-
-            .navlink-item {
-                margin-right: 3rem;
-            }
-
-            .sub-menu a {
-                font-size: 1.2rem;
-            }
-        }
-
-        .navlink-item-dropdown .sub-menu {
-            display: none;
-        }
-
-        .menu-title,
-        .hamburger {
-            font-size: 1.2rem;
-        }
-
-        .logo-wrap {
-            position: absolute;
-            inset: 0;
-            margin: auto;
-            width: max-content;
-            height: max-content;
-            margin-top: 3.2rem;
-        }
-    }
+  }
 }
 
 @include mq(lg) {
-    header {
-        .secondary-navbar {
-            display: flex;
-        }
-
-        .explore-tray {
-            width: 40vw;
-            top: 3rem;
-            .product-list {
-                gap: 2.5rem;
-                a {
-                    font-size: 1.4rem;
-                }
-                .navlink-item{
-                    width: calc(33.33% - 1.7rem);
-                }
-                .icon {
-                    width: 4.5rem;
-                    height: 4.5rem;
-                }
-            }
-        }
+  header {
+    .secondary-navbar {
+      display: flex;
     }
+
+    .explore-tray {
+      width: 40vw;
+      top: 3rem;
+      .product-list {
+        gap: 2.5rem;
+        a {
+          font-size: 1.4rem;
+        }
+        .navlink-item {
+          width: calc(33.33% - 1.7rem);
+        }
+        .icon {
+          width: 4.5rem;
+          height: 4.5rem;
+        }
+      }
+    }
+  }
 }
