--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -1,160 +1,205 @@
 @use "../config/" as *;
 
 .product-section {
-    overflow: hidden;
-    background: radial-gradient(110.73% 221.19% at -4.65% 0%, #292D32 0%, #151519 30.5%, #292D32 100%)
-        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
-    ;
+  overflow: hidden;
+  background: radial-gradient(
+      110.73% 221.19% at -4.65% 0%,
+      #292d32 0%,
+      #151519 30.5%,
+      #292d32 100%
+    )
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  position: relative;
+  isolation: isolate;
+  video {
+    min-height: 100%;
+    position: absolute;
+  }
+  .vr-video {
+    max-width: 70rem;
+    margin-top: 2rem;
+    padding-top: 2rem;
     position: relative;
+    width: 100%;
     isolation: isolate;
-
-    .swiper {
-        &-slide {
-            height: 100vh;
-            padding-top: 10rem;
-        }
-
-        &-button-next,
-        &-button-prev {
-            display: none;
-        }
-
-        &-pagination {
-            bottom: unset;
-            top: 6.5rem;
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-
-            &-bullet {
-                width: 4.5rem;
-                height: 4.5rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background-color: unset;
-                opacity: unset;
-
-                &-active .icon{
-                    filter: grayscale(0);
-                }
-            }
-        }
+    &::after {
+      pointer-events: none;
+      content: "";
+      top: 0;
+      inset-inline: -30%;
+      height: 20rem;
+      z-index: -1;
+      position: absolute;
+      border-radius: 50%;
+      border-top: 0.1rem solid #ecc243;
+      mask-image: linear-gradient(
+        to right,
+        transparent 10%,
+        #000 10%,
+        #000 90%,
+        transparent 90%,
+        transparent 100%
+      );
+    }
+  }
+  .video {
+    width: 100%;
+    mask-image: url("/img/vr-m.webp");
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    aspect-ratio: 590/357;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    @include mq(md) {
+      mask-image: url("/img/vr.webp");
+      aspect-ratio: 811/278;
+    }
+  }
+  .swiper {
+    &-slide {
+      height: 100vh;
+      padding-top: 10rem;
     }
 
-    .section-sub-title{
-        padding-inline: 2rem;
+    &-button-next,
+    &-button-prev {
+      display: none;
     }
 
-    .icon {
-        width: 2.3rem;
-        height: 2.3rem;
-        object-fit: contain;
-        filter: grayscale(1);
-        transition: filter ease-in 300ms;
-    }
+    &-pagination {
+      bottom: unset;
+      top: 6.5rem;
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
 
-    .product-content {
+      &-bullet {
+        width: 4.5rem;
+        height: 4.5rem;
         display: flex;
-        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        justify-content: space-evenly;
-        height: 100%;
+        background-color: unset;
+        opacity: unset;
 
-        &::before {
-            content: '';
-            position: absolute;
-            inset: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
+        &-active .icon {
+          filter: grayscale(0);
         }
-
-        &.product-bio-verse::before {
-            background: url("/img/product/item-bg/bio-verse-bg-m.webp") center/cover;
-        }
-
-        &.product-chem-verse::before {
-            background: url("/img/product/item-bg/chem-verse-bg-m.webp") center/cover;
-        }
-
-        &.product-atom-verse::before {
-            background: url("/img/product/item-bg/atom-verse-bg-m.webp") center/cover;
-        }
-
-        &.product-space-verse::before {
-            background: url("/img/product/item-bg/space-verse-bg-m.webp") center/cover;
-        }
-
-        &.product-geo-verse::before {
-            background: url("/img/product/item-bg/geo-verse-bg-m.webp") center/cover;
-        }
-
-        a {
-            display: flex;
-            justify-content: center;
-        }
+      }
     }
-    .product-geo-verse {
-        .section-sub-title {
-            text-transform: uppercase;
-            letter-spacing: 0.9rem;
-            word-spacing: 0.5rem;
-            font-weight: 500;
-        }
+  }
+
+  .section-sub-title {
+    padding-inline: 2rem;
+  }
+
+  .icon {
+    width: 2.3rem;
+    height: 2.3rem;
+    object-fit: contain;
+    filter: grayscale(1);
+    transition: filter ease-in 300ms;
+  }
+
+  .product-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
-
-
-
-
-    .product-banner {
-        // margin-bottom: 5.4rem;
+    &.product-bio-verse::before {
+      background: url("/img/product/item-bg/bio-verse-bg-m.webp") center/cover;
     }
 
-    .section-sub-title,
-    .section-title {
-        color: var(--white);
+    &.product-chem-verse::before {
+      background: url("/img/product/item-bg/chem-verse-bg-m.webp") center/cover;
     }
 
+    &.product-atom-verse::before {
+      background: url("/img/product/item-bg/atom-verse-bg-m.webp") center/cover;
+    }
+
+    &.product-space-verse::before {
+      background: url("/img/product/item-bg/space-verse-bg-m.webp") center/cover;
+    }
+
+    &.product-geo-verse::before {
+      background: url("/img/product/item-bg/geo-verse-bg-m.webp") center/cover;
+    }
+
+    a {
+      display: flex;
+      justify-content: center;
+    }
+  }
+  .product-geo-verse {
     .section-sub-title {
-        min-height: 6.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.9rem;
+      word-spacing: 0.5rem;
+      font-weight: 500;
     }
+  }
 
-    .product-item {
-        height: 100%;
-        flex-direction: column;
-    }
+  .product-banner {
+    // margin-bottom: 5.4rem;
+  }
+
+  .section-sub-title,
+  .section-title {
+    color: var(--white);
+  }
+
+  .section-sub-title {
+    min-height: 6.8rem;
+  }
+
+  .product-item {
+    height: 100%;
+    flex-direction: column;
+  }
 }
 
 @include mq(lg) {
-    .product-section {
-        .product-item {
-            margin-inline: auto;
-        }
-
-        .product-content {
-            width: 70%;
-            margin-inline: auto;
-            &.product-bio-verse::before {
-                background: url("/img/product/item-bg/bio-verse-bg.webp") center/cover;
-            }
-
-            &.product-chem-verse::before {
-                background: url("/img/product/item-bg/chem-verse-bg.webp") center/cover;
-            }
-
-            &.product-atom-verse::before {
-                background: url("/img/product/item-bg/atom-verse-bg.webp") center/cover;
-            }
-
-            &.product-space-verse::before {
-                background: url("/img/product/item-bg/space-verse-bg.webp") center/cover;
-            }
-
-            &.product-geo-verse::before {
-                background: url("/img/product/item-bg/geo-verse-bg.webp") center/cover;
-            }
-        }
+  .product-section {
+    .product-item {
+      margin-inline: auto;
     }
+
+    .product-content {
+      width: 70%;
+      margin-inline: auto;
+      &.product-bio-verse::before {
+        background: url("/img/product/item-bg/bio-verse-bg.webp") center/cover;
+      }
+
+      &.product-chem-verse::before {
+        background: url("/img/product/item-bg/chem-verse-bg.webp") center/cover;
+      }
+
+      &.product-atom-verse::before {
+        background: url("/img/product/item-bg/atom-verse-bg.webp") center/cover;
+      }
+
+      &.product-space-verse::before {
+        background: url("/img/product/item-bg/space-verse-bg.webp") center/cover;
+      }
+
+      &.product-geo-verse::before {
+        background: url("/img/product/item-bg/geo-verse-bg.webp") center/cover;
+      }
+    }
+  }
 }
