--- a/src/assets/scss/layout/_product-page.scss
+++ b/src/assets/scss/layout/_product-page.scss
@@ -25,8 +25,8 @@
     background-color: #ffffff40;
     backdrop-filter: blur(0.55rem);
     -webkit-backdrop-filter: blur(0.55rem);
-    -webkit-mask-image: url("/img/product/page-bg/vr.png");
-    mask-image: url("/img/product/page-bg/vr.png");
+    -webkit-mask-image: url("/img/product/page-bg/vr.webp");
+    mask-image: url("/img/product/page-bg/vr.webp");
     -webkit-mask-repeat: no-repeat;
     mask-repeat: no-repeat;
     -webkit-mask-position: center;
@@ -170,8 +170,8 @@
     .hero-content {
       width: 90%;
       margin-inline: auto;
-      -webkit-mask-image: url("/img/product/page-bg/vr.png");
-      mask-image: url("/img/product/page-bg/vr.png");
+      -webkit-mask-image: url("/img/product/page-bg/vr.webp");
+      mask-image: url("/img/product/page-bg/vr.webp");
       -webkit-mask-repeat: no-repeat;
       mask-repeat: no-repeat;
       -webkit-mask-position: center;
