--- a/src/assets/scss/layout/_modal.scss
+++ b/src/assets/scss/layout/_modal.scss
@@ -1,80 +1,102 @@
 @use "../config/" as *;
 
 .modal {
-    position: fixed;
-    inset: 0;
-    z-index: 11;
+  position: fixed;
+  inset: 0;
+  z-index: 11;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  &.modal-greyscale {
+    backdrop-filter: blur(1rem);
+    background-color: rgba(black, 0.5);
+  }
+  &.active {
+    display: flex;
+  }
+  .head {
+    display: flex;
+    justify-content: space-between;
+  }
+  .btn-close {
+    padding: 0.1rem;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+  .form-title {
+    text-transform: uppercase;
+    color: var(--black);
+    font-size: 2rem;
+    font-weight: 400;
+  }
+  .form-control {
+    border: unset;
+    background-color: #7c7c7c4d;
+    color: #ffffff;
+    &::placeholder {
+      color: transparent;
+    }
+  }
+  .form-group {
+    margin-bottom: 3rem;
+  }
+
+  .form-label {
+    font-size: 1.4rem;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+
+  .form-section {
+    border: 0.1rem solid #fff;
+    padding: 2rem 2.5rem;
+    border-radius: 2.5rem;
+    backdrop-filter: blur(2rem);
+    width: calc(100% - 4rem);
+    background: linear-gradient(
+        151.22deg,
+        #fde086 9.45%,
+        rgba(255, 255, 255, 0.2) 94.83%
+      ),
+      linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6));
+  }
+  .btn.btn-secondary {
+    border-radius: 1rem;
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.4rem;
+    color: #ffffff;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    svg {
+      display: none;
+    }
+  }
+  .video-section {
     display: flex;
     justify-content: center;
     align-items: center;
-    .head{
-        display: flex;
-        justify-content: space-between;
+    padding: 5rem;
+    video {
+      max-width: 70vw;
+      width: 100%;
+      height: 100%;
     }
-    .btn-close{
-        padding: 0.1rem;
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-    }
-    .form-title{
-        text-transform: uppercase;
-        color: var(--black);
-        font-size: 2rem;
-        font-weight: 400;
-    }
-    .form-control{
-        border: unset;
-        background-color: #7c7c7c4d ;
-        color: #ffffff;
-        &::placeholder {
-            color: transparent;
-          }
-    }
-    .form-group{
-        margin-bottom: 3rem;
-    }
-   
-    .form-label{
-        font-size: 1.4rem;
-        color: black;
-        text-transform: uppercase;
-        font-weight: 400;
-    }
-
-    .form-section {
-        border: 0.1rem solid #fff;
-        padding: 2rem 2.5rem;
-        border-radius: 2.5rem;
-        backdrop-filter: blur(2rem);
-        width: calc(100% - 4rem);
-        background: linear-gradient(151.22deg, #fde086 9.45%, rgba(255, 255, 255, 0.2) 94.83%),
-        linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6));
-    }
-    .btn.btn-secondary{
-        border-radius: 1rem;
-        width: 100%;
-        padding: 2rem;
-        font-size: 1.4rem;
-        color: #ffffff;
-        text-transform: uppercase;
-        display: flex;
-        justify-content: center;
-        svg{
-            display: none;
-        }
-    }
+  }
 }
 
 @include mq(md) {
-
 }
 
 @include mq(lg) {
-    .modal {
-        .form-section{
-            padding: 4rem 13rem;
-            width: 50%;
-        }
+  .modal {
+    .form-section {
+      padding: 4rem 13rem;
+      width: 50%;
     }
+  }
 }
