--- a/src/assets/scss/layout/_vr-cards.scss
+++ b/src/assets/scss/layout/_vr-cards.scss
@@ -12,31 +12,30 @@
   .text-dark {
     color: #292d32;
   }
-  @include mq(md){
-
+  @include mq(md) {
     .card-list-svi {
       display: grid;
       grid-template-columns: repeat(6, 1fr);
       grid-template-rows: repeat(2, auto);
       grid-column-gap: 4rem;
       grid-row-gap: 4rem;
-  
+
       .card:nth-child(1) {
         grid-area: 1 / 1 / 2 / 3;
       }
-  
+
       .card:nth-child(2) {
         grid-area: 1 / 3 / 2 / 5;
       }
-  
+
       .card:nth-child(3) {
         grid-area: 1 / 5 / 2 / 7;
       }
-  
+
       .card:nth-child(4) {
         grid-area: 2 / 1 / 3 / 4;
       }
-  
+
       .card:nth-child(5) {
         grid-area: 2 / 4 / 3 / 7;
       }
@@ -61,9 +60,11 @@
     }
 
     &-black {
-      background: linear-gradient(139.6deg,
-          rgba(109, 110, 110, 0.7) 4.41%,
-          rgba(49, 52, 52, 0.7) 96.51%);
+      background: linear-gradient(
+        139.6deg,
+        rgba(109, 110, 110) 4.41%,
+        rgba(49, 52, 52) 96.51%
+      );
     }
 
     &-light {
@@ -71,9 +72,11 @@
     }
 
     &-orange {
-      background: linear-gradient(139.6deg,
-          rgba(236, 194, 67, 0.9) 4.41%,
-          rgba(198, 131, 14, 0.9) 92.36%);
+      background: linear-gradient(
+        139.6deg,
+        rgba(236, 194, 67, 0.9) 4.41%,
+        rgba(198, 131, 14, 0.9) 92.36%
+      );
     }
 
     &-title {
@@ -89,9 +92,15 @@
 
     &-list {
       position: relative;
-      background: linear-gradient(139.6deg, #373a3a 4.41%, #191b1b 96.51%);
+      isolation: isolate;
+      &::before {
+        content: "";
+        position: absolute;
+        inset: 0 0 10rem;
+        z-index: -1;
+        background: linear-gradient(139.6deg, #373a3a 4.41%, #191b1b 96.51%);
+      }
       padding: 2rem;
-
       @include mq(md) {
         padding-inline: 4rem;
       }
@@ -344,13 +353,22 @@
   }
 
   .card-7 {
-    .price-wrap{
-      @include mq(md){
+    @include mq(md) {
+      .head {
         display: flex;
+        justify-content: space-between;
+        gap: 2rem;
+        align-items: flex-start;
       }
     }
-    .price-per-verse{
-      @include mq(md){
+    .price-wrap {
+      @include mq(lg) {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+    .price-per-verse {
+      @include mq(md) {
         width: max-content;
         flex-shrink: 0;
       }
@@ -389,6 +407,7 @@
       position: relative;
       border-radius: 2rem;
       margin-right: 5rem;
+      padding-right: 6rem;
 
       .price {
         color: #292d32;
@@ -438,8 +457,11 @@
     }
 
     .card-text {
-      font-size: 1rem;
+      font-size: 1.4rem;
       font-weight: 500;
+      @include mq(md) {
+        font-size: 1.8rem;
+      }
     }
 
     .icon-wrap {
@@ -450,7 +472,7 @@
       width: 33.33%;
 
       &:not(:last-child) {
-        border-right: 0.1rem solid #E0E0E0;
+        border-right: 0.1rem solid #e0e0e0;
       }
     }
   }
