--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -13,7 +13,8 @@
   isolation: isolate;
   video {
     min-height: 100%;
-    position: absolute;
+    width: 100%;
+    scale: 1.1;
   }
   .vr-video {
     max-width: 70rem;
@@ -52,6 +53,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+    position: relative;
     @include mq(md) {
       mask-image: url("/img/vr.webp");
       aspect-ratio: 811/278;
