--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
 .btn {
   padding: var(--space-2) var(--space-6);
   border-radius: var(--btn-radius, 50vmax);
-  background-color: #f8f8f8;
+  background-color: #fff;
   color: var(--secondary);
   transition: all linear 0.4s;
   font-size: 1.2rem;
