--- a/src/assets/scss/layout/_lab.scss
+++ b/src/assets/scss/layout/_lab.scss
@@ -1,84 +1,86 @@
 @use "../config/" as *;
 
 .lab-section {
-    padding-top: 6rem;
+  padding-top: 6rem;
+  position: relative;
+
+  .section-title {
+    font-weight: 600;
+    line-height: 1.2;
+  }
+
+  .lab-image-section {
     position: relative;
+    margin-top: 10rem;
 
-    .section-title {
-        line-height: 1.2;
+    a {
+      position: absolute;
+      inset: 0;
+      margin: auto auto 3rem;
+      width: max-content;
+      height: max-content;
     }
+  }
 
-    .lab-image-section {
-        position: relative;
-        margin-top: 10rem;
+  .book {
+    position: absolute;
+    top: -16%;
+    left: 15%;
+    width: 35%;
+    animation-name: rotateing;
+    animation-duration: 14000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+  }
 
-        a {
-            position: absolute;
-            inset: 0;
-            margin: auto auto 3rem;
-            width: max-content;
-            height: max-content;
-        }
-    }
-
-    .book {
-        position: absolute;
-        top: -16%;
-        left: 15%;
-        width: 35%;
-        animation-name: rotateing;
-        animation-duration: 9000ms;
-        animation-iteration-count: infinite;
-        animation-timing-function: ease-in-out;
-    }
-
-    .scope {
-        position: absolute;
-        top: 7%;
-        right: 14%;
-        width: 27%;
-        animation-name: rotateing;
-        animation-duration: 9000ms;
-        animation-iteration-count: infinite;
-        animation-timing-function: ease-in-out;
-    }
+  .scope {
+    position: absolute;
+    top: 7%;
+    right: 14%;
+    width: 27%;
+    animation-name: rotateing;
+    animation-duration: 12000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-delay: -1s;
+  }
 }
 
 @keyframes rotateing {
-    0% {
-        rotate: 0deg;
-    }
+  0% {
+    rotate: 0deg;
+  }
 
-    50% {
-        rotate: 35deg;
-    }
+  50% {
+    rotate: 35deg;
+  }
 
-    100% {
-        rotate: 0deg;
-    }
+  100% {
+    rotate: 0deg;
+  }
 }
 
 @include mq(lg) {
-    .lab-section {
-        padding-top: 8rem;
-        .lab-image-section{
-            margin-top: auto;
-            width: 70%;
-            margin-inline: auto;
-            a {
-                margin-bottom: 5rem;
-            }
-        }
-        .book{
-            width: 23%;
-            top: -5%;
-            left: 12%;
-        }
-        
-        .scope{
-            width: 18%;
-            top: 7%;
-            right: 10%;
-        }
+  .lab-section {
+    padding-top: 8rem;
+    .lab-image-section {
+      margin-top: auto;
+      width: 70%;
+      margin-inline: auto;
+      a {
+        margin-bottom: 5rem;
+      }
     }
+    .book {
+      width: 23%;
+      top: -5%;
+      left: 12%;
+    }
+
+    .scope {
+      width: 18%;
+      top: 7%;
+      right: 10%;
+    }
+  }
 }
