--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -12,10 +12,11 @@ header {
   justify-content: space-between;
 
   .logo {
-    filter: brightness(0) invert(1);
     width: 4.5rem;
   }
-
+  .logo-2 {
+    display: none;
+  }
   .secondary-navbar {
     display: none;
   }
@@ -52,6 +53,8 @@ header {
     backdrop-filter: blur(2rem);
     border-radius: 0 1.3rem 1.3rem 0;
     transition: 400ms ease-in-out;
+    max-height: 100vh;
+    overflow: auto;
     &.navbar-active {
       display: block;
       left: 0;
@@ -81,7 +84,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     gap: 1.6rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
 
     .navlink-item {
       width: calc(50% - 0.8rem);
@@ -104,13 +107,13 @@ header {
       .coming-soon {
         position: absolute;
         bottom: 0;
-        inset-inline: 0.5rem;
+        inset-inline: -1rem;
         border-radius: 50vmax;
         background-color: #292d32;
         color: #ecc243;
         text-align: center;
         padding-block: 0.4rem;
-        transform: translateY(50%);
+        transform: translateY(70%);
       }
     }
 
@@ -152,6 +155,10 @@ header {
   }
   .logo {
     filter: unset;
+    display: none;
+  }
+  .logo-2 {
+    display: block;
   }
 }
 @include mq(md) {
