--- a/src/assets/scss/layout/_modal.scss
+++ b/src/assets/scss/layout/_modal.scss
@@ -39,9 +39,9 @@
       color: transparent;
     }
   }
-  .form-group {
-    margin-bottom: 3rem;
-  }
+  // .form-group {
+  //   margin-bottom: 3rem;
+  // }
 
   .form-label {
     font-size: 1.4rem;
@@ -51,6 +51,8 @@
   }
 
   .form-section {
+    max-height: 80vh;
+    overflow: auto;
     border: 0.1rem solid #fff;
     padding: 2rem 2.5rem;
     border-radius: 2.5rem;
@@ -95,8 +97,16 @@
 @include mq(lg) {
   .modal {
     .form-section {
-      padding: 4rem 13rem;
-      width: 50%;
+      padding: 4rem;
+      width: 100%;
+      max-width: 70rem;
+    }
+  }
+}
+@include mq(xl) {
+  .modal {
+    .form-section {
+      padding-inline: 13rem;
     }
   }
 }
