--- a/src/assets/scss/layout/_product-page.scss
+++ b/src/assets/scss/layout/_product-page.scss
@@ -61,7 +61,7 @@
       margin: auto;
       border-bottom: 0.1rem solid rgba(white, 0.8);
       pointer-events: none;
-      rotate: 180deg;
+      // rotate: 180deg;
       transform-origin: bottom;
 
       transition: 1000ms;
