--- a/src/assets/scss/layout/_faq.scss
+++ b/src/assets/scss/layout/_faq.scss
@@ -26,6 +26,7 @@
     }
 
     &-question {
+      cursor: pointer;
       font-size: 1.4rem;
       display: flex;
       justify-content: space-between;
