--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -160,6 +160,17 @@ header {
   .logo-2 {
     display: block;
   }
+  .secondary-navbar {
+    .demo {
+      color: black;
+    }
+  }
+  .get-in-touch {
+    .btn {
+      background-color: black;
+      color: #ecc243;
+    }
+  }
 }
 @include mq(md) {
   header {
