--- a/src/assets/scss/layout/_vr-cards.scss
+++ b/src/assets/scss/layout/_vr-cards.scss
@@ -223,10 +223,12 @@
       .icon-list-wrap {
         display: flex;
         justify-content: center;
+        align-items: center;
         gap: 1rem;
 
         .icon {
-          width: 3rem;
+          height: 3rem;
+          width: auto;
         }
       }
 
@@ -330,6 +332,9 @@
       .card-title {
         font-size: 4rem;
         margin-bottom: 2rem;
+        @include mq(lg) {
+          font-size: 6rem;
+        }
       }
 
       .text {
@@ -339,6 +344,19 @@
 
     .btn {
       margin-top: 1rem;
+    }
+    @include mq(md) {
+      .card-wrap {
+        position: relative;
+        .icon {
+          position: absolute;
+          bottom: 1rem;
+          right: 1rem;
+        }
+        .text {
+          padding-right: 6rem;
+        }
+      }
     }
   }
 
