--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -35,9 +35,15 @@
   }
 
   &-error {
-    font-size: 1.3rem;
     color: #a70000;
+    font-size: 1.3rem;
     padding-left: 1rem;
     margin-top: 0.2rem;
+  }
+  &-success {
+    font-size: 1.3rem;
+    padding-left: 1rem;
+    margin-top: 0.2rem;
+    color: #00a700;
   }
 }
